# Billing_Project

./: .gitignore  CMakeLists.txt  HIGH_LEVEL_DESIGN.md  KIRO_PROMPTS.md  LOW_LEVEL_DESIGN.md  Makefile  README.md
.kiro/hooks/: confluence-sync-on-save.json
edgeflow/: CMakeLists.txt  KIRO_PROMPTS.md  Makefile  README.md
edgeflow/docs/: DESIGN.md
edgeflow/examples/: basic.edge
edgeflow/include/: edgeflow.h
edgeflow/src/cli/: main.c
edgeflow/src/core/: config.c  log.c  metrics.c  types.c
edgeflow/src/net/: publisher.c
edgeflow/src/pipeline/: engine.c  queue.c  router.c  transform.c
edgeflow/src/storage/: file_store.c
edgeflow/tests/: test_edgeflow.c
include/: fifteen_columns.h
scripts/: get_page_id.ps1  sync_to_confluence.ps1
src/: main.c  procedures.c
